tests/typechecker/should_fail/maps1.csp
test1 = mapFromList(<(\ _ @ STOP, 1)>)
